# gdfsnj

./: README.md
B/: 1.sh
B/devexam/exam11/: CMakeLists.txt
B/devexam/exam11/src/: CMakeLists.txt  main.cpp
B/devexam/exam11/src/src/: pkgverify
B/devexam/exam21/: CMakeCache.txt  Makefile  cmake_install.cmake
B/devexam/exam21/src/: CTestTestfile.cmake  Makefile  cmake_install.cmake  exam  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  todomodel.cpp  todomodel.h  todoview.cpp  todoview.h  ui_mainwindow.h
B/devexam/exam21/src/exam_autogen/: moc_predefs.h  mocs_compilation.cpp
B/devexam/exam21/src/exam_autogen/EWIEGA46WW/: moc_autotest.cpp  moc_mainwindow.cpp  moc_todomodel.cpp  moc_todoview.cpp
B/devexam/exam3/: Makefile  cmake_install.cmake
B/devexam/exam3/src/: Makefile  answer.h  cmake_install.cmake  exam  exam.h  main.cpp
